# mobile_robot

./: README.md
LaserMotion/LaserUndistortion_ws/src/LaserUndistortion/: CMakeLists.txt
LaserMotion/LaserUndistortion_ws/src/LaserUndistortion/src/: LidarMotionUndistortion.cpp
calib_odom/: CMakeLists.txt
calib_odom/include/calib_odom/: Odom_Calib.hpp  laser_scan.h
calib_odom/src/: Odom_Calib.cpp  laser_scan.cpp
calib_odom/test/: test_calib_odom.cpp
mbot_bringup/: CMakeLists.txt  package.xml
mbot_bringup/.history/src/: planar_segmentation_20200526205820.cpp
mbot_bringup/include/: buf.h  gps.h  rgb_line.hpp
mbot_bringup/include/mbot_bringup/: Qsort.h  WeightedFit.h  laser_detect_obstracles.h  laser_recharge.h  move_along_edge.h  obstacledet.h  planar_segmentation.h  vibe_plus.h  vibe_plus_macro.h
mbot_bringup/src/: WeightedFit.cpp  image_proc.cpp  laser_detect.obstracles.cpp  laser_recharge.cpp  mapdata_send_update.cpp  move_along_edge.cpp  move_along_edge_node.cpp  obstacledet.cpp  planar_segmentation.cpp  planar_segmentation_node.cpp  rgb_line.cpp  vibe_plus.cpp
mbot_bringup/test/: test_detect_obstracle.cpp  test_lane_line.cpp  test_laser_recharge.cpp
odom+imu定位/: circuit_zigzag.cpp  initial_motion.cpp  navigateFunction.cpp  update_sensor.cpp
定位/cartographer--zhushi/: carto算法分析.txt
定位/学习文档/localization_in_auto_driving文档/: 定位-01里程计模块.txt  定位-02前端里程计有优化.txt  定位-03传感器时间同步.txt  定位-04里程计精度评价.txt  定位-05点云畸变补偿.txt  定位-06建图系统结构优化.txt  定位-07后端优化.txt  定位-08闭环修正.txt  定位-09前端里程计扩展.txt  定位-10建图的讨论.txt  定位-11基于地图的定位.txt
